--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "landing-page",
+  "homepage": "https://github.com/gaurimehrotra1623/fallen-whispers",
   "private": true,
   "version": "0.0.0",
   "type": "module",
